# starccato-flow

./: .gitignore  LICENSE  README.md  generate_galactic_supernovae.ipynb  generate_waveforms.ipynb  inference_sky_localisation.ipynb  pca_comparison.ipynb  pca_vae_comparison.ipynb  plot_ccsn_multi_channel.ipynb  plot_detector_noise.ipynb  plotting.ipynb  plotting_sky_location.ipynb  plotting_testbed.ipynb  pyproject.toml  simulate_galactic_supernovae.ipynb  sky_localisation.ipynb  test_supernovae_ranges.ipynb  testing_imports.py  thesis_cvae_plots.ipynb  thesis_flow_plots.ipynb  thesis_preprocessing_plots.ipynb  thesis_supernovae_plots.ipynb  thesis_tables.ipynb  toy_flow_matching_demo.ipynb  train.ipynb  train_cvae.ipynb  train_flow.ipynb  train_flow_matching.ipynb  train_flow_toy.ipynb  train_flow_toy_toy.ipynb  train_parameter.ipynb  train_sky_localisation.ipynb  train_snr.ipynb  train_toy.ipynb  train_toy_flow.ipynb  train_vae_denoising.ipynb  visualise_galactic_supernovae.ipynb
archive/: s_theta_toy.py  simulate_galactic_supernovae.ipynb  trainer_flow_matching.py  trainer_vae_denoising.py  vae_reg.py  visualise_galactic_supernovae.ipynb
outdir/: cvae_val_indices.npy  cvae_val_parameters.npy  cvae_val_signals.npy  cvae_weights.pt  generated_parameters.npy  generator_weights.pt
poster-presentation/: curriculum_plots.ipynb  flow_plots.ipynb  flow_ye_plots.ipynb  sky_plots.ipynb  supernovae_plots.ipynb
thesis/: article_plots.ipynb  thesis_cvae_plots.ipynb  thesis_eda_plots.ipynb  thesis_flow_plots.ipynb  thesis_preprocessing_plots.ipynb  thesis_tables.ipynb  (+2 more)
(+57 files in other folders)
